星星加入主页链接

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <ul>
 	<li><a href="./手风琴选项卡.html">手风琴选项卡</a></li>
+	<li><a href="./星星评分">星星评分</a></li>
 	li><a href="js/">JS</a>
 	<li><a href="js/angular/angular.min.js">angular</a></li>
 	<li><a href="js/jquery/dist/jquery.min.js">jQuery</a></li>
