星星加入主页链接1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <ul>
 	<li><a href="./手风琴选项卡.html">手风琴选项卡</a></li>
 	<li><a href="./星星评分">星星评分</a></li>
-	li><a href="js/">JS</a>
+	<li><a href="js/">JS</a>
 	<li><a href="js/angular/angular.min.js">angular</a></li>
 	<li><a href="js/jquery/dist/jquery.min.js">jQuery</a></li>
 	<li><a href="js/less/dist/less.min.js">LESS</a></li>
